<resources>
    <string name="app_name">Gerador de Contatos</string>
    <string name="action_settings">Configurações</string>
    <string name="tim" translatable="false">Tim</string>
    <string name="vivo" translatable="false">Vivo</string>
    <string name="oi" translatable="false">Oi</string>
    <string name="claro" translatable="false">Claro</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="gerar">GERAR</string>
    <string name="_1" translatable="false">1</string>
    <string name="quantidade">Quantidade</string>
    <string name="_55" translatable="false">55</string>
    <string name="ddi" translatable="false">DDI</string>
    <string name="_85" translatable="false">85</string>
    <string name="alt_ddi">Alterar para 55</string>
    <string name="ddd" translatable="false">DDD</string>
    <string name="novo">Novo</string>
    <string name="salvar">Salvar</string>
    <string name="copiar">Copiar</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="gerador_de_contatos">Gerador de Contatos</string>
    <string name="help">Ajuda</string>
    <string name="about">Sobre</string>
    <string name="ao_clicar">Ao clicar em COPIAR, vá em um gerenciador de arquivos, crie um arquivo qualquer - pode ser um arquivo de texto (.txt) ou do Word (.docx) ou qualquer outro e renomeie o final para \".vcf\" (sugestão: \"contacts.vcf\"). Após isso bastar clicar em cima e importar.</string>
    <string name="ao_salvar">O arquivo foi gerado na raiz do armazenamento do telefone. Use um gerenciador de arquivo qualquer e procure por \"/0\" ou \"sdcard\", lá estará o arquivo gerado. Outra opção é ir no aplicativo de Contatos e clicar em \"importar contatos\".</string>
    <string name="versao">Versão</string>
    <string name="_1_0" translatable="false">1.0</string>
    <string name="contato">Contato</string>
    <string name="facebook" translatable="false">Facebook:</string>
    <string name="linkedin" translatable="false">LinkedIn:</string>
    <string name="levi_gleik_fb" translatable="false">http://www.facebook.com/levi.gleik2</string>
    <string name="levi_gleik_ln" translatable="false">https://www.linkedin.com/in/levi-gleik-2014a5168/</string>
    <string name="whatsapp" translatable="false">WhatsApp:</string>
    <string name="meu_numero" translatable="false">+55 85 98828-8483</string>
</resources>
